# oci-policy-analysis-flet

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  data_repository.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: data_repository.doctree  environment.pickle  index.doctree  main.doctree  modules.doctree
.github/workflows/: build.yml  docs.yml  ocir.yaml  ocir2.yaml
_modules/: data_repository.html  index.html  main.html
_sources/: index.rst.txt  modules.rst.txt
app/: data_repository.py  main.py
docs/: conf.py  data_repository.rst  index.rst
