[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "navrail-oci-app"
version = "0.1.0"
description = "A Flet-based NavRail app for OCI IAM, policies, and AI insights"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "flet>=0.22.0",
    "oci>=2.129.2",
]

[project.optional-dependencies]
dev = [
    "sphinx",
    "furo",
    "ruff",
    "pre-commit",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
